<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvLabelEnvio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/labelEnvio"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChamada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvLabelEnvio"
        android:layout_marginTop="290dp"
        android:text="@string/labelChamada"
        android:textSize="23sp"
        android:textColor="@android:color/black"/>


    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/tvLabelEnvio"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp">

        <RadioButton
            android:id="@+id/rbWhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rgWhat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <RadioButton
            android:id="@+id/rbMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rgMensagem"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tvLabelEnvio"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="340dp">

        <RadioButton
            android:id="@+id/rbTelefonica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rgTelefonica"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbChamaWhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rgChamaWhat"
            android:textSize="24sp" />
    </RadioGroup>
    
    <Button
        android:id="@+id/btnConcluir"
        android:layout_width="330dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/labelBtnConcluir"
        android:layout_marginBottom="14dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/button_concluir"/>

</androidx.constraintlayout.widget.ConstraintLayout>