<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/labelOriantationMap"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGravar"
        android:layout_width="262dp"
        android:layout_height="262dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_gravar"
        android:text="@string/labelBtnGravar"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnConcluir2"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/labelBtnConcluir2"
        android:background="@drawable/button_concluir"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginBottom="14dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>